--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </ul>
         </section>
         <section>
+            <h2>Intro</h2>
             <p>Get targeted influencers list in your niche at your fingertips so you can focus on running your.</p>
             <button>Next</button>
         </section>
@@ -74,24 +75,24 @@
             helped your
             organization mature</p>
 
-        <address>
-            <ul>
-                <li>
-                    <h3>Address</h3>
-                    <p>1090 A/01 Richmond Avenue, Houston, NY 7704, USA</p>
-                </li>
-                <li>
-                    <h3>Contact</h3>
-                    <p>+123 456 789 147
-                        example@gmail.com </p>
-                </li>
-                <li>
-                    <h3>Office</h3>
-                    <p>Monday - Saturday
-                        9AM - 10PM</p>
-                </li>
-            </ul>
-        </address>
+
+        <ul>
+            <li>
+                <h3>Address</h3>
+                <address>1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
+            </li>
+            <li>
+                <h3>Contact</h3>
+                <p>+123 456 789 147
+                    example@gmail.com </p>
+            </li>
+            <li>
+                <h3>Office</h3>
+                <p>Monday - Saturday
+                    9AM - 10PM</p>
+            </li>
+        </ul>
+
         <ul>
             <li><a href="">Instagram</a></li>
             <li><a href="">Direct</a></li>
