--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FT Yoga</title>
 </head>
 
 <body>
     <header>
         <nav>
             <a href="./index.html">
-                <img src="./images/logo.svg" alt="">
+                FT Yoga
             </a>
 
             <ul>
@@ -36,25 +36,37 @@
             <a href="./">Get started Free</a>
             <ul>
                 <li>300+ Yoga Class</li>
-                <li>40k+ Participent</li>
+                <li>40k+ Participant</li>
             </ul>
+            <img src="./images/hero-trainer.jpg" alt="woman doing yoga">
+            <img src="./images/Group 1261152797@2x.svg" alt="logo">
+            <img src="./images/stats.jpg" alt="fitness stats">
         </section>
         <section>
             <h2>Intro</h2>
-            <p>Get targeted influencers list in your niche at your fingertips so you can focus on running your.</p>
+            <img src="./images/exercise.jpg" alt="woman doing yoga">
+            <p>Get targeted influensers list in your niche at your fingertips so you can focus on running your.</p>
             <button>Next</button>
         </section>
         <section>
+            <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
+            <img src="./images/Group 1261152797@2x.svg" alt="logo">
             <h2>Get Happiness to Good healthy!</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
             <a href="./">Let’s Start</a>
         </section>
         <section>
+            <img src="./images/trainer1.jpg" alt="woman doing yoga">
+            <img src="./images/trainer2.jpg" alt="woman doing yoga">
             <h2>Anytime, any place, any workout</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
             <a href="./">Get started Free</a>
         </section>
         <section>
+            <img src="./images/example1.jpg" alt="man doing yoga">
+            <img src="./images/example2.jpg" alt="woman doing yoga">
+            <img src="./images/example3.jpg" alt="woman doing yoga">
+            <img src="./images/example4.jpg" alt="woman doing yoga">
             <h2>Follow us on Instagram
                 #fTYOGA</h2>
             <a href="./">Follow</a>
@@ -68,7 +80,7 @@
     </main>
     <footer>
         <a href="./">
-            <img src="./images/logo.svg" alt="">
+            FT Yoga
 
         </a>
         <p>About pages are perfect spaces to talk about where you started, how you've grown, and the ideals that have
@@ -100,7 +112,7 @@
             <li><a href="">Twitter</a></li>
         </ul>
 
-        <p>2022 Copyright. FalconThought</p>
+        <p>&copy; 2022 Copyright. FalconThought</p>
 
     </footer>
 
