--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FT Yoga</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Inter:wght@400;700&family=Poppins:wght@400;500;600&family=Roboto&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+        integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -39,18 +48,18 @@
                 <li>40k+ Participant</li>
             </ul>
             <img src="./images/hero-trainer.jpg" alt="woman doing yoga">
-            <img src="./images/Group 1261152797@2x.svg" alt="logo">
+            <img src="./images/underlayer.svg" alt="logo">
             <img src="./images/stats.jpg" alt="fitness stats">
         </section>
         <section>
             <h2>Intro</h2>
             <img src="./images/exercise.jpg" alt="woman doing yoga">
-            <p>Get targeted influensers list in your niche at your fingertips so you can focus on running your.</p>
+            <p>Get targeted influencers list in your niche at your fingertips so you can focus on running your.</p>
             <button>Next</button>
         </section>
         <section>
             <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
-            <img src="./images/Group 1261152797@2x.svg" alt="logo">
+            <img src="./images/underlayer.svg" alt="logo">
             <h2>Get Happiness to Good healthy!</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
             <a href="./">Let’s Start</a>
