add fonts and text color

--- a/index.html
+++ b/index.html
@@ -20,96 +20,103 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">
+            <a class="logo" href="./index.html">
                 FT Yoga
             </a>
 
             <ul>
-                <li>Pricing</li>
-                <li>About</li>
-                <li>Contacts</li>
+                <li class="nav-link">Pricing</li>
+                <li class="nav-link">About</li>
+                <li class="nav-link">Contacts</li>
             </ul>
 
         </nav>
 
         <ul>
-            <li><a href="./">Log In</a></li>
+            <li><a class="nav-link" href="./">Log In</a></li>
             <li><a href="./">Log In</a></li>
         </ul>
 
     </header>
     <main>
         <section>
-            <h1>Choose Your Best Yoga Teacher</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
+            <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1>
+            <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            </p>
             <a href="./">Get started Free</a>
             <ul>
-                <li>300+ Yoga Class</li>
-                <li>40k+ Participant</li>
+                <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
+                <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
             </ul>
-            <img src="./images/hero-trainer.jpg" alt="woman doing yoga">
+            <!-- <img src="./images/hero-trainer.jpg" alt="woman doing yoga">
             <img src="./images/underlayer.svg" alt="logo">
-            <img src="./images/stats.jpg" alt="fitness stats">
+            <img src="./images/stats.jpg" alt="fitness stats"> -->
         </section>
         <section>
             <h2>Intro</h2>
-            <img src="./images/exercise.jpg" alt="woman doing yoga">
-            <p>Get targeted influencers list in your niche at your fingertips so you can focus on running your.</p>
+            <!-- <img src="./images/exercise.jpg" alt="woman doing yoga"> -->
+            <p class="intro-text">Get targeted influencers list in your niche at your fingertips so you can focus on
+                running your.</p>
             <button>Next</button>
         </section>
         <section>
-            <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
-            <img src="./images/underlayer.svg" alt="logo">
-            <h2>Get Happiness to Good healthy!</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
+            <!-- <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
+            <img src="./images/underlayer.svg" alt="logo"> -->
+            <h2 class="block-title">Get Happiness to Good healthy!</h2>
+            <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            </p>
             <a href="./">Let’s Start</a>
         </section>
         <section>
-            <img src="./images/trainer1.jpg" alt="woman doing yoga">
-            <img src="./images/trainer2.jpg" alt="woman doing yoga">
-            <h2>Anytime, any place, any workout</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have</p>
+            <!-- <img src="./images/trainer1.jpg" alt="woman doing yoga">
+            <img src="./images/trainer2.jpg" alt="woman doing yoga"> -->
+            <h2 class="block-title">Anytime, any place, any workout</h2>
+            <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            </p>
             <a href="./">Get started Free</a>
         </section>
         <section>
-            <img src="./images/example1.jpg" alt="man doing yoga">
+            <!-- <img src="./images/example1.jpg" alt="man doing yoga">
             <img src="./images/example2.jpg" alt="woman doing yoga">
             <img src="./images/example3.jpg" alt="woman doing yoga">
-            <img src="./images/example4.jpg" alt="woman doing yoga">
-            <h2>Follow us on Instagram
-                #fTYOGA</h2>
+            <img src="./images/example4.jpg" alt="woman doing yoga"> -->
+            <h2 class="block-title">Follow us on Instagram
+                <span class="accent">#fTYOGA</span>
+            </h2>
             <a href="./">Follow</a>
         </section>
-        <section>
-            <h2>Join our newsletter</h2>
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+        <section class="form-block">
+            <h2 class="form-title">Join our newsletter</h2>
+            <p class="form-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                piece of classical
                 Latin literature
                 from 45 BC, making.</p>
         </section>
     </main>
-    <footer>
-        <a href="./">
+    <footer class="footer">
+        <a class="logo" href="./">
             FT Yoga
 
         </a>
-        <p>About pages are perfect spaces to talk about where you started, how you've grown, and the ideals that have
+        <p class="footer-text">About pages are perfect spaces to talk about where you started, how you've grown, and
+            the ideals that have
             helped your
             organization mature</p>
 
 
         <ul>
             <li>
-                <h3>Address</h3>
-                <address>1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
+                <h3 class="address-title">Address</h3>
+                <address class="footer-text">1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
             </li>
             <li>
-                <h3>Contact</h3>
-                <p>+123 456 789 147
+                <h3 class="address-title">Contact</h3>
+                <p class="address-text">+123 456 789 147
                     example@gmail.com </p>
             </li>
             <li>
-                <h3>Office</h3>
-                <p>Monday - Saturday
+                <h3 class="address-title">Office</h3>
+                <p class="address-text">Monday - Saturday
                     9AM - 10PM</p>
             </li>
         </ul>
@@ -121,7 +128,7 @@
             <li><a href="">Twitter</a></li>
         </ul>
 
-        <p>&copy; 2022 Copyright. FalconThought</p>
+        <p class="copyright">&copy; 2022 Copyright. FalconThought</p>
 
     </footer>
 
