add flex in header

--- a/index.html
+++ b/index.html
@@ -18,29 +18,29 @@
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="container header">
+        <nav class="main-nav">
             <a class="logo" href="./index.html">
                 FT Yoga
             </a>
 
-            <ul>
-                <li class="nav-link">Pricing</li>
-                <li class="nav-link">About</li>
-                <li class="nav-link">Contacts</li>
+            <ul class="nav-list">
+                <li class="nav-link"><a href="">Pricing</a></li>
+                <li class="nav-link"><a href="">About</a></li>
+                <li class="nav-link"><a href="">Contacts</a></li>
             </ul>
 
         </nav>
 
-        <ul>
-            <li><a class="nav-link" href="./">Log In</a></li>
-            <li><a href="./">Log In</a></li>
+        <ul class="contacts-list">
+            <li class="nav-btn"><a href="./">Log In</a></li>
+            <li class="nav-btn"><a href="./">Log In</a></li>
         </ul>
 
     </header>
     <main>
         <section>
-            <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1>
+            <!-- <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1> -->
             <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the majority have
             </p>
             <a href="./">Get started Free</a>
