add flex in hero

--- a/index.html
+++ b/index.html
@@ -39,18 +39,33 @@
 
     </header>
     <main>
-        <section>
-            <!-- <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1> -->
-            <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the majority have
-            </p>
-            <a href="./">Get started Free</a>
-            <ul>
-                <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
-                <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
-            </ul>
-            <!-- <img src="./images/hero-trainer.jpg" alt="woman doing yoga">
-            <img src="./images/underlayer.svg" alt="logo">
-            <img src="./images/stats.jpg" alt="fitness stats"> -->
+        <section class="container hero">
+            <div class="hero-main-block">
+                <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1>
+
+                <div class="hero-stats-block">
+                    <div>
+                        <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority
+                            have
+                        </p>
+                        <a class="hero-btn " href="./">Get started Free <img class='hero-btn-arrow'   src="./images/arrow.svg" alt=""></a>
+                        <ul class="hero-list">
+                            <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
+                            <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
+                        </ul>
+
+
+
+                    </div>
+                    <img class="hero-stats-img" src="./images/stats.svg" alt="fitness stats" width="220" height="220">
+                </div>
+            </div>
+
+            <div class="hero-img">
+                <img src="./images/hero-trainer.jpg" alt="woman doing yoga" width="510">
+                <!-- <img src="./images/underlayer.svg" alt="logo" width="695"> -->
+            </div>
         </section>
         <section>
             <h2>Intro</h2>
