--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                             majority
                             have
                         </p>
-                        <a class="hero-btn " href="./">Get started Free <img class='hero-btn-arrow'   src="./images/arrow.svg" alt=""></a>
+                        <a class="hero-btn " href="./">Get started Free <img class='hero-btn-arrow'
+                                src="./images/arrow.svg" alt=""></a>
                         <ul class="hero-list">
                             <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
                             <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
@@ -67,12 +68,15 @@
                 <!-- <img src="./images/underlayer.svg" alt="logo" width="695"> -->
             </div>
         </section>
-        <section>
+        <section class="container">
             <h2>Intro</h2>
-            <!-- <img src="./images/exercise.jpg" alt="woman doing yoga"> -->
-            <p class="intro-text">Get targeted influencers list in your niche at your fingertips so you can focus on
-                running your.</p>
-            <button>Next</button>
+            <div class="intro-section">
+                <p class="intro-number">#01</p>
+                <img class="intro-img" src="./images/exercise.jpg" alt="woman doing yoga">
+                <p class="intro-text">Get targeted influencers list in your niche at your fingertips so you can focus on
+                    running your.</p>
+                <button>Next</button>
+            </div>
         </section>
         <section>
             <!-- <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
