add flex in hapiness and workout sections

--- a/index.html
+++ b/index.html
@@ -78,21 +78,33 @@
                 <button>Next</button>
             </div>
         </section>
-        <section>
-            <!-- <img src="./images/jumping-trainer.jpg" alt="man doing yoga">
-            <img src="./images/underlayer.svg" alt="logo"> -->
-            <h2 class="block-title">Get Happiness to Good healthy!</h2>
-            <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority have
-            </p>
-            <a href="./">Let’s Start</a>
+        <section class="container happiness-section">
+            <!-- <img class="hapiness-img" src="./images/jumping-trainer.jpg" alt="man doing yoga"> -->
+            <img class="happiness-img" src="./images/underlayer.svg" alt="logo">
+            <div class="happiness-block">
+                <h2 class="block-title">Get Happiness to Good healthy!</h2>
+                <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                </p>
+                <a class="hero-btn btn" href="./">Let’s Start <img class='hero-btn-arrow' src="./images/arrow.svg"
+                        alt=""></a>
+            </div>
         </section>
-        <section>
-            <!-- <img src="./images/trainer1.jpg" alt="woman doing yoga">
-            <img src="./images/trainer2.jpg" alt="woman doing yoga"> -->
-            <h2 class="block-title">Anytime, any place, any workout</h2>
-            <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority have
-            </p>
-            <a href="./">Get started Free</a>
+        <section class="container workout-section">
+
+            <div>
+                <h2 class="block-title">Anytime, any place, any workout</h2>
+                <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have
+                </p>
+                <a class="hero-btn" href="./">Get started Free <img class='hero-btn-arrow' src="./images/arrow.svg"
+                        alt=""></a>
+            </div>
+
+            <div class="img-block">
+                <img src="./images/trainer1.jpg" alt="woman doing yoga" width="653">
+                <img src="./images/trainer2.jpg" alt="woman doing yoga" width="653">
+            </div>
         </section>
         <section>
             <!-- <img src="./images/example1.jpg" alt="man doing yoga">
