add flex in follow and form sections

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <img src="./images/trainer2.jpg" alt="woman doing yoga" width="653">
             </div>
         </section>
-        <section>
+        <section class="container">
             <!-- <img src="./images/example1.jpg" alt="man doing yoga">
             <img src="./images/example2.jpg" alt="woman doing yoga">
             <img src="./images/example3.jpg" alt="woman doing yoga">
@@ -114,14 +114,17 @@
             <h2 class="block-title">Follow us on Instagram
                 <span class="accent">#fTYOGA</span>
             </h2>
-            <a href="./">Follow</a>
+            <a class="round-btn" href="./">Follow <img class='hero-btn-arrow' src="./images/arrow.svg" alt=""></a>
         </section>
-        <section class="form-block">
-            <h2 class="form-title">Join our newsletter</h2>
-            <p class="form-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                piece of classical
-                Latin literature
-                from 45 BC, making.</p>
+        <section class="container">
+            <div class="form-block">
+                <h2 class="form-title">Join our newsletter</h2>
+                <p class="form-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+                    a
+                    piece of classical
+                    Latin literature
+                    from 45 BC, making.</p>
+            </div>
         </section>
     </main>
     <footer class="footer">
