add flex in footer

--- a/index.html
+++ b/index.html
@@ -128,41 +128,49 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="logo" href="./">
-            FT Yoga
+        <div class="container">
+            <div class="footer-main-block">
+                <div><a class="logo footer-logo" href="./">
+                        FT Yoga
 
-        </a>
-        <p class="footer-text">About pages are perfect spaces to talk about where you started, how you've grown, and
-            the ideals that have
-            helped your
-            organization mature</p>
+                    </a>
+                    <p class="footer-text">About pages are perfect spaces to talk about where you started, how you've
+                        grown,
+                        and
+                        the ideals that have
+                        helped your
+                        organization mature</p>
+                </div>
 
+                <ul class="footer-list">
+                    <li class="footer-list-item">
+                        <h3 class="address-title">Address</h3>
+                        <address class="address-text">1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
+                    </li>
+                    <li class="footer-list-item">
+                        <h3 class="address-title">Contact</h3>
+                        <p class="address-text">+123 456 789 147
+                            example@gmail.com </p>
+                    </li>
+                    <li class="footer-list-item">
+                        <h3 class="address-title">Office</h3>
+                        <p class="address-text">Monday - Saturday
+                            9AM - 10PM</p>
+                    </li>
+                </ul>
+            </div>
 
-        <ul>
-            <li>
-                <h3 class="address-title">Address</h3>
-                <address class="footer-text">1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
-            </li>
-            <li>
-                <h3 class="address-title">Contact</h3>
-                <p class="address-text">+123 456 789 147
-                    example@gmail.com </p>
-            </li>
-            <li>
-                <h3 class="address-title">Office</h3>
-                <p class="address-text">Monday - Saturday
-                    9AM - 10PM</p>
-            </li>
-        </ul>
+            <div>
+                <ul>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Direct</a></li>
+                    <li><a href="">LinkedIn</a></li>
+                    <li><a href="">Twitter</a></li>
+                </ul>
 
-        <ul>
-            <li><a href="">Instagram</a></li>
-            <li><a href="">Direct</a></li>
-            <li><a href="">LinkedIn</a></li>
-            <li><a href="">Twitter</a></li>
-        </ul>
-
-        <p class="copyright">&copy; 2022 Copyright. FalconThought</p>
+                <p class="copyright">&copy; 2022 Copyright. <span class="footer-accent">FalconThought</span></p>
+            </div>
+        </div>
 
     </footer>
 
