--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
                             majority
                             have
                         </p>
-                        <a class="hero-btn " href="./">Get started Free <img class='hero-btn-arrow'
-                                src="./images/arrow.svg" alt=""></a>
+                        <a class="hero-btn " href="./">Get started Free
+                            <svg class="hero-btn-arrow" width="30" height="22">
+                                <use href="./images/sprite.svg#icon-short-arrow"></use>
+                            </svg>
+                        </a>
                         <ul class="hero-list">
                             <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
                             <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
@@ -69,7 +72,7 @@
             </div>
         </section>
         <section class="container">
-            <h2>Intro</h2>
+            <h2 class="visually-hidden">Intro</h2>
             <div class="intro-section">
                 <p class="intro-number">#01</p>
                 <img class="intro-img" src="./images/exercise.jpg" alt="woman doing yoga">
@@ -86,8 +89,9 @@
                 <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
                     have
                 </p>
-                <a class="hero-btn btn" href="./">Let’s Start <img class='hero-btn-arrow' src="./images/arrow.svg"
-                        alt=""></a>
+                <a class="hero-btn btn" href="./">Let’s Start <svg class="hero-btn-arrow" width="30" height="22">
+                        <use href="./images/sprite.svg#icon-short-arrow"></use>
+                    </svg></a>
             </div>
         </section>
         <section class="container workout-section">
@@ -97,8 +101,9 @@
                 <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
                     have
                 </p>
-                <a class="hero-btn" href="./">Get started Free <img class='hero-btn-arrow' src="./images/arrow.svg"
-                        alt=""></a>
+                <a class="hero-btn" href="./">Get started Free <svg class="hero-btn-arrow" width="30" height="22">
+                        <use href="./images/sprite.svg#icon-short-arrow"></use>
+                    </svg></a>
             </div>
 
             <div class="img-block">
@@ -114,7 +119,9 @@
             <h2 class="block-title">Follow us on Instagram
                 <span class="accent">#fTYOGA</span>
             </h2>
-            <a class="round-btn" href="./">Follow <img class='hero-btn-arrow' src="./images/arrow.svg" alt=""></a>
+            <a class="round-btn" href="./">Follow <svg class="hero-btn-arrow">
+                    <use href="./images/sprite.svg#icon-long-arrow"></use>
+                </svg></a>
         </section>
         <section class="container">
             <div class="form-block">
@@ -160,12 +167,14 @@
                 </ul>
             </div>
 
-            <div>
-                <ul>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Direct</a></li>
-                    <li><a href="">LinkedIn</a></li>
-                    <li><a href="">Twitter</a></li>
+            <div class="footer-underline-block">
+                <ul class="social-list">
+                    <li class="social-list-item">
+                        <a href=""><img src="./images/instagram.svg" alt=""></a>
+                    </li>
+                    <li class="social-list-item"><a href=""><img src="./images/direct.svg" alt=""></a></li>
+                    <li class="social-list-item"><a href=""><img src="./images/linkedin.svg" alt=""></a></li>
+                    <li class="social-list-item"><a href=""><img src="./images/twitter.svg" alt=""></a></li>
                 </ul>
 
                 <p class="copyright">&copy; 2022 Copyright. <span class="footer-accent">FalconThought</span></p>
