--- a/index.html
+++ b/index.html
@@ -2,113 +2,138 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FT Yoga</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=El+Messiri&family=Inter:wght@400;700&family=Poppins:wght@400;500;600&family=Roboto&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+
+    <!-- Header -->
     <header class="container header">
         <nav class="main-nav">
-            <a class="logo" href="./index.html">
-                FT Yoga
-            </a>
+            <a class="logo" href="./index.html"> FT Yoga </a>
 
             <ul class="nav-list">
                 <li class="nav-link"><a href="">Pricing</a></li>
                 <li class="nav-link"><a href="">About</a></li>
                 <li class="nav-link"><a href="">Contacts</a></li>
             </ul>
-
         </nav>
 
         <ul class="contacts-list">
             <li class="nav-btn"><a href="./">Log In</a></li>
             <li class="nav-btn"><a href="./">Log In</a></li>
         </ul>
-
     </header>
     <main>
+
+        <!-- Hero -->
+
         <section class="container hero">
             <div class="hero-main-block">
-                <h1 class="main-title">Choose Your Best <span class="main-title-span">Yoga</span> Teacher</h1>
+                <h1 class="main-title">
+                    Choose Your Best <span class="main-title-span">Yoga</span> Teacher
+                </h1>
 
                 <div class="hero-stats-block">
                     <div>
-                        <p class="hero-text">There are many variations of passages of Lorem Ipsum available, but the
-                            majority
-                            have
+                        <p class="hero-text">
+                            There are many variations of passages of Lorem Ipsum available,
+                            but the majority have
                         </p>
-                        <a class="hero-btn " href="./">Get started Free
+                        <a class="hero-btn" href="./">Get started Free
                             <svg class="hero-btn-arrow" width="30" height="22">
                                 <use href="./images/sprite.svg#icon-short-arrow"></use>
                             </svg>
                         </a>
                         <ul class="hero-list">
-                            <li class="hero-list-item"><span class="numbers">300+</span> Yoga Class</li>
-                            <li class="hero-list-item"><span class="numbers">40k+</span> Participant</li>
+                            <li class="hero-list-item">
+                                <span class="numbers">300+</span> Yoga Class
+                            </li>
+                            <li class="hero-list-item">
+                                <span class="numbers">40k+</span> Participant
+                            </li>
                         </ul>
-
-
-
                     </div>
-                    <img class="hero-stats-img" src="./images/stats.svg" alt="fitness stats" width="220" height="220">
                 </div>
             </div>
 
-            <div class="hero-img">
-                <img src="./images/hero-trainer.jpg" alt="woman doing yoga" width="510">
-                <!-- <img src="./images/underlayer.svg" alt="logo" width="695"> -->
+            <div class="hero-images">
+                <img class="trainer-img" src="./images/hero-trainer.svg" alt="woman doing yoga" width="510" />
+                <img src="./images/lotus.svg" alt="" class="lotus-img" />
+                <img src="./images/dotted-circle.svg" alt="" class="circle-img" />
+                <img src="./images/big-star.svg" alt="" class="big-star-img" />
+                <img src="./images/little-star.svg" alt="" class="little-star-img" />
+                <img class="hero-stats-img" src="./images/stats.svg" alt="fitness stats" width="220" height="220" />
+                <img src="./images/dots.svg" alt="" class="dots-img" />
             </div>
         </section>
+
+        <!-- Intro section -->
+
         <section class="container">
             <h2 class="visually-hidden">Intro</h2>
             <div class="intro-section">
                 <p class="intro-number">#01</p>
-                <img class="intro-img" src="./images/exercise.jpg" alt="woman doing yoga">
-                <p class="intro-text">Get targeted influencers list in your niche at your fingertips so you can focus on
-                    running your.</p>
-                <button>Next</button>
+                <div class="intro-img">
+                    <div class="intro-img-bcg"></div>
+                    <img class="intro-trainer-img" src="./images/intro-trainer.svg" alt="">
+                </div>
+                <div class="intro-text-block">
+                    <img src="./images/stars.svg" alt="" class="stars">
+                    <p class="intro-text">
+                        Get targeted influencers list in your niche at your fingertips so
+                        you can focus on running your.
+                    </p>
+                </div>
+                <button class="intro-btn">Next
+                    <img src="./images/rainbow-arrow.svg" alt="">
+                    <img class="ellipse-img" src="./images/ellipse.svg" alt="">
+                </button>
             </div>
         </section>
         <section class="container happiness-section">
             <!-- <img class="hapiness-img" src="./images/jumping-trainer.jpg" alt="man doing yoga"> -->
-            <img class="happiness-img" src="./images/underlayer.svg" alt="logo">
+            <img class="happiness-img" src="./images/underlayer.svg" alt="logo" />
             <div class="happiness-block">
                 <h2 class="block-title">Get Happiness to Good healthy!</h2>
-                <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have
+                <p class="block-text">
+                    There are many variations of passages of Lorem Ipsum available, but
+                    the majority have
                 </p>
-                <a class="hero-btn btn" href="./">Let’s Start <svg class="hero-btn-arrow" width="30" height="22">
+                <a class="hero-btn btn" href="./">Let’s Start
+                    <svg class="hero-btn-arrow" width="30" height="22">
                         <use href="./images/sprite.svg#icon-short-arrow"></use>
                     </svg></a>
             </div>
         </section>
         <section class="container workout-section">
-
             <div>
                 <h2 class="block-title">Anytime, any place, any workout</h2>
-                <p class="block-text">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have
+                <p class="block-text">
+                    There are many variations of passages of Lorem Ipsum available, but
+                    the majority have
                 </p>
-                <a class="hero-btn" href="./">Get started Free <svg class="hero-btn-arrow" width="30" height="22">
+                <a class="hero-btn" href="./">Get started Free
+                    <svg class="hero-btn-arrow" width="30" height="22">
                         <use href="./images/sprite.svg#icon-short-arrow"></use>
                     </svg></a>
             </div>
 
             <div class="img-block">
-                <img src="./images/trainer1.jpg" alt="woman doing yoga" width="653">
-                <img src="./images/trainer2.jpg" alt="woman doing yoga" width="653">
+                <img src="./images/trainer1.jpg" alt="woman doing yoga" width="653" />
+                <img src="./images/trainer2.jpg" alt="woman doing yoga" width="653" />
             </div>
         </section>
         <section class="container">
@@ -116,53 +141,52 @@
             <img src="./images/example2.jpg" alt="woman doing yoga">
             <img src="./images/example3.jpg" alt="woman doing yoga">
             <img src="./images/example4.jpg" alt="woman doing yoga"> -->
-            <h2 class="block-title">Follow us on Instagram
+            <h2 class="block-title">
+                Follow us on Instagram
                 <span class="accent">#fTYOGA</span>
             </h2>
-            <a class="round-btn" href="./">Follow <svg class="hero-btn-arrow">
+            <a class="round-btn" href="./">Follow
+                <svg class="hero-btn-arrow">
                     <use href="./images/sprite.svg#icon-long-arrow"></use>
                 </svg></a>
         </section>
         <section class="container">
             <div class="form-block">
                 <h2 class="form-title">Join our newsletter</h2>
-                <p class="form-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
-                    a
-                    piece of classical
-                    Latin literature
-                    from 45 BC, making.</p>
+                <p class="form-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text.
+                    It has roots in a piece of classical Latin literature from 45 BC,
+                    making.
+                </p>
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="container">
             <div class="footer-main-block">
-                <div><a class="logo footer-logo" href="./">
-                        FT Yoga
-
-                    </a>
-                    <p class="footer-text">About pages are perfect spaces to talk about where you started, how you've
-                        grown,
-                        and
-                        the ideals that have
-                        helped your
-                        organization mature</p>
+                <div>
+                    <a class="logo footer-logo" href="./"> FT Yoga </a>
+                    <p class="footer-text">
+                        About pages are perfect spaces to talk about where you started,
+                        how you've grown, and the ideals that have helped your
+                        organization mature
+                    </p>
                 </div>
 
                 <ul class="footer-list">
                     <li class="footer-list-item">
                         <h3 class="address-title">Address</h3>
-                        <address class="address-text">1090 A/01 Richmond Avenue, Houston, NY 7704, USA</address>
+                        <address class="address-text">
+                            1090 A/01 Richmond Avenue, Houston, NY 7704, USA
+                        </address>
                     </li>
                     <li class="footer-list-item">
                         <h3 class="address-title">Contact</h3>
-                        <p class="address-text">+123 456 789 147
-                            example@gmail.com </p>
+                        <p class="address-text">+123 456 789 147 example@gmail.com</p>
                     </li>
                     <li class="footer-list-item">
                         <h3 class="address-title">Office</h3>
-                        <p class="address-text">Monday - Saturday
-                            9AM - 10PM</p>
+                        <p class="address-text">Monday - Saturday 9AM - 10PM</p>
                     </li>
                 </ul>
             </div>
@@ -170,19 +194,26 @@
             <div class="footer-underline-block">
                 <ul class="social-list">
                     <li class="social-list-item">
-                        <a href=""><img src="./images/instagram.svg" alt=""></a>
+                        <a href=""><img src="./images/instagram.svg" alt="" /></a>
                     </li>
-                    <li class="social-list-item"><a href=""><img src="./images/direct.svg" alt=""></a></li>
-                    <li class="social-list-item"><a href=""><img src="./images/linkedin.svg" alt=""></a></li>
-                    <li class="social-list-item"><a href=""><img src="./images/twitter.svg" alt=""></a></li>
+                    <li class="social-list-item">
+                        <a href=""><img src="./images/direct.svg" alt="" /></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href=""><img src="./images/linkedin.svg" alt="" /></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href=""><img src="./images/twitter.svg" alt="" /></a>
+                    </li>
                 </ul>
 
-                <p class="copyright">&copy; 2022 Copyright. <span class="footer-accent">FalconThought</span></p>
+                <p class="copyright">
+                    &copy; 2022 Copyright.
+                    <span class="footer-accent">FalconThought</span>
+                </p>
             </div>
         </div>
-
     </footer>
-
 </body>
 
 </html>
