add positioned images in happiness section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <!-- Header -->
     <header class="container header">
         <nav class="main-nav">
@@ -37,7 +36,6 @@
         </ul>
     </header>
     <main>
-
         <!-- Hero -->
 
         <section class="container hero">
@@ -88,26 +86,44 @@
                 <p class="intro-number">#01</p>
                 <div class="intro-img">
                     <div class="intro-img-bcg"></div>
-                    <img class="intro-trainer-img" src="./images/intro-trainer.svg" alt="">
+                    <img class="intro-trainer-img" src="./images/intro-trainer.svg" alt="" />
                 </div>
                 <div class="intro-text-block">
-                    <img src="./images/stars.svg" alt="" class="stars">
+                    <img src="./images/stars.svg" alt="" class="stars" />
                     <p class="intro-text">
                         Get targeted influencers list in your niche at your fingertips so
                         you can focus on running your.
                     </p>
                 </div>
-                <button class="intro-btn">Next
-                    <img src="./images/rainbow-arrow.svg" alt="">
-                    <img class="ellipse-img" src="./images/ellipse.svg" alt="">
+                <button class="intro-btn">
+                    Next
+                    <img src="./images/rainbow-arrow.svg" alt="" />
+                    <img class="ellipse-img" src="./images/ellipse.svg" alt="" />
                 </button>
             </div>
         </section>
+
+        <!-- Happiness section -->
         <section class="container happiness-section">
-            <!-- <img class="hapiness-img" src="./images/jumping-trainer.jpg" alt="man doing yoga"> -->
-            <img class="happiness-img" src="./images/underlayer.svg" alt="logo" />
+            <div class="happiness-img-block">
+                <img class="happiness-trainer-img" src="./images/jumping-trainer.svg" alt="man doing yoga" />
+                <img class="happiness-lotus-img" src="./images/underlayer.svg" alt="logo" />
+                <div class="heart-block">
+                    <svg class="heart" width="60" height="60">
+                        <use href="./images/sprite.svg#icon-heart" width="29" height="26"></use>
+                    </svg>
+                    <div>
+                        <p class="heart-block-header">Heart Rate</p>
+                        <p> <span class="heart-block-number">168</span> bpm</p>
+                    </div>
+                </div>
+                <div class="courses-stats-block">
+                    <p class="courses-number">500+</p>
+                    <p class="courses-text">Free Courses</p>
+                </div>
+            </div>
             <div class="happiness-block">
-                <h2 class="block-title">Get Happiness to Good healthy!</h2>
+                <h2 class="block-title happiness-block-title">Get Happiness to Good healthy!</h2>
                 <p class="block-text">
                     There are many variations of passages of Lorem Ipsum available, but
                     the majority have
