add positioned images in workout section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <button class="intro-btn">
                     Next
-                    <img src="./images/rainbow-arrow.svg" alt="" />
+                    <img class="rainbow-arrow" src="./images/rainbow-arrow.svg" alt="" />
                     <img class="ellipse-img" src="./images/ellipse.svg" alt="" />
                 </button>
             </div>
@@ -114,7 +114,7 @@
                     </svg>
                     <div>
                         <p class="heart-block-header">Heart Rate</p>
-                        <p> <span class="heart-block-number">168</span> bpm</p>
+                        <p><span class="heart-block-number">168</span> bpm</p>
                     </div>
                 </div>
                 <div class="courses-stats-block">
@@ -123,7 +123,9 @@
                 </div>
             </div>
             <div class="happiness-block">
-                <h2 class="block-title happiness-block-title">Get Happiness to Good healthy!</h2>
+                <h2 class="block-title happiness-block-title">
+                    Get Happiness to Good healthy!
+                </h2>
                 <p class="block-text">
                     There are many variations of passages of Lorem Ipsum available, but
                     the majority have
@@ -134,9 +136,12 @@
                     </svg></a>
             </div>
         </section>
+
+        <!-- Workout section -->
+
         <section class="container workout-section">
             <div>
-                <h2 class="block-title">Anytime, any place, any workout</h2>
+                <h2 class="block-title workout-title">Anytime, any place, any workout</h2>
                 <p class="block-text">
                     There are many variations of passages of Lorem Ipsum available, but
                     the majority have
@@ -148,11 +153,25 @@
             </div>
 
             <div class="img-block">
-                <img src="./images/trainer1.jpg" alt="woman doing yoga" width="653" />
-                <img src="./images/trainer2.jpg" alt="woman doing yoga" width="653" />
+                <img class="workout-trainer-img-f" src="./images/trainer1.svg" alt="woman doing yoga" width="653" />
+                <img class="workout-trainer-img-s" src="./images/trainer2.svg" alt="woman doing yoga" width="653" />
+                <img src="./images/play-circle-light.svg" alt="" class="workout-play-icon">
+                <div class="workout-video-block">
+                    <img src="./images/play-circle-dark.svg" alt="" class="play-icon-dark">
+                    <p class="workout-video-text">High Quality Video</p>
+                </div>
+                <div class="trainer-block">
+                    <img src="./images/trainer-icon.svg" alt="" class="trainer-icon">
+                    <p class="trainer-text">Professional Trainer</p>
+                </div>
             </div>
         </section>
-        <section class="container">
+
+
+        <!-- Invitation section -->
+
+
+        <section class="container invitation-section">
             <!-- <img src="./images/example1.jpg" alt="man doing yoga">
             <img src="./images/example2.jpg" alt="woman doing yoga">
             <img src="./images/example3.jpg" alt="woman doing yoga">
