add positioned images in invitation section

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 
 
         <section class="container invitation-section">
-            <!-- <img src="./images/example1.jpg" alt="man doing yoga">
-            <img src="./images/example2.jpg" alt="woman doing yoga">
-            <img src="./images/example3.jpg" alt="woman doing yoga">
-            <img src="./images/example4.jpg" alt="woman doing yoga"> -->
-            <h2 class="block-title">
+            <img class="invitation-trainer1" src="./images/example1.svg" alt="man doing yoga">
+            <img class="invitation-trainer2" src="./images/example2.svg" alt="woman doing yoga">
+            <img class="invitation-trainer3" src="./images/example3.svg" alt="woman doing yoga">
+            <img class="invitation-trainer4" src="./images/example4.svg" alt="woman doing yoga">
+            <h2 class="invitation-title">
                 Follow us on Instagram
                 <span class="accent">#fTYOGA</span>
             </h2>
