--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
                     <use href="./images/sprite.svg#icon-long-arrow"></use>
                 </svg></a>
         </section>
+
+        <!-- Form block -->
         <section class="container">
             <div class="form-block">
                 <h2 class="form-title">Join our newsletter</h2>
@@ -193,6 +195,10 @@
                     It has roots in a piece of classical Latin literature from 45 BC,
                     making.
                 </p>
+                <form action="" class="form">
+                    <input class="form-input" type="email" placeholder="For latest update send mail">
+                    <button class="form-btn">Subscribe</button>
+                </form>
             </div>
         </section>
     </main>
